Push_Pop_Set.txt
Products> db.comments.updateOne({_id:5} ,{$push:{comments: {user:'Priyush',text:'Be Happy'}}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
Products> db.comments.find().limit(1)
[
  {
    _id: 1,
    title: 'Introduction to MongoDB',
    content: 'MongoDB is a popular NoSQL database...',
    author: 'John Doe',
    comments: [
      { user: 'Alice', text: 'Great article!' },
      { user: 'Bob', text: 'Thanks for sharing.' },
      { user: 'Eva', text: 'Its beatifull!' },
      { user: 'jessy' }
    ],
    metadata: { views: 1000, likes: 50 }
  }
]
Products> db.comments.find({{_id:5})
Uncaught:
SyntaxError: Unexpected token (1:18)

> 1 | db.comments.find({{_id:5})
    |                   ^
  2 |

Products> db.comments.find({_id:5})
[
  {
    _id: 5,
    title: 'Optimizing MongoDB Performance',
    content: 'Tips and tricks to improve MongoDB performance...',
    author: 'Alex Turner',
    comments: [
      { user: 'Ivy', text: 'Very practical advice!' },
      { user: 'Jack', text: 'Helped me a lot.' },
      { user: 'Priyush', text: 'Be Happy' }
    ],
    metadata: { views: 900, likes: 55 }
  }
]
Products> db.comments.updateOne({_id:5} ,{$pop :{'comments':1}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
Products> db.comments.find({_id:5})
[
  {
    _id: 5,
    title: 'Optimizing MongoDB Performance',
    content: 'Tips and tricks to improve MongoDB performance...',
    author: 'Alex Turner',
    comments: [
      { user: 'Ivy', text: 'Very practical advice!' },
      { user: 'Jack', text: 'Helped me a lot.' }
    ],
    metadata: { views: 900, likes: 55 }
  }
]
Products> db.comments.find({_id:7, 'comments.user':'alice'})

Products> db.comments.find({_id:7, 'comments.user':'Alice'})
[
  {
    _id: 7,
    title: 'Introduction to MongoDB',
    content: 'MongoDB is a popular NoSQL database...',
    author: 'Vinod Thapa',
    comments: [
      { user: 'Alice', text: 'Awesome article!' },
      { user: 'Vinod', text: 'Thanks for sharing.' }
    ],
    metadata: { views: 1000, likes: 70 }
  }
]
Products> db.comments.updateOne({_id:7, 'comments.user':'Alice'},{$set:{'comments.$.text':'Awesome Priyush'} })
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
Products> db.comments.find({_id:7, 'comments.user':'Alice'})
[
  {
    _id: 7,
    title: 'Introduction to MongoDB',
    content: 'MongoDB is a popular NoSQL database...',
    author: 'Vinod Thapa',
    comments: [
      { user: 'Alice', text: 'Awesome Priyush' },
      { user: 'Vinod', text: 'Thanks for sharing.' }
    ],
    metadata: { views: 1000, likes: 70 }
  }
]